# CryptoTester

./: CMakeLists.txt  README.md  code_claculate_pieces.cpp  crypto-tester-test.sh  cryptotester_firstversion.cpp  ct-csv.sh  dd_run.sh  generate_random_files.sh  generate_report.sh  get-hashes-test.sh  get-hashes.cpp  gh-csv.sh  main.cpp
